--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Movie Soundtrack Playlist Generator</title>
     <link rel="stylesheet" href="./assets/style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
 </head>
 
 <body>
@@ -16,6 +16,7 @@
         <h3>This site will allow you to create randomly generated music playlists from a group of films that you
             select.</h2>
     </main>
+    <script src="./assets/key.js"></script>
     <script src="./assets/script.js"></script>
 </body>
 
