--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h3>This site will allow you to create randomly generated music playlists from a group of films that you
             select.</h2>
     </main>
+    <script src="./key.js"></script>
     <script src="./assets/script.js"></script>
 </body>
 
