testing a git pull

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h3>This site will allow you to create randomly generated music playlists from a group of films that you
             select.</h2>
     </main>
+    <script src="./keys.js"></script>
     <script src="./assets/script.js"></script>
 </body>
 
