--- a/results.html
+++ b/results.html
@@ -20,8 +20,8 @@
     <main class="columns is-5 is-centered">
         <div class="card column is-one-third m-3">
             <div class="card-image">
-            <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            <figure class="image is-4by3" id="video-1">
+                <!-- <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> -->
             </figure>
             </div>
             <div class="card-content">
@@ -32,7 +32,7 @@
                 </figure>
                 </div>
                 <div class="media-content">
-                <p class="title is-4">John Smith</p>
+                <p class="title is-4">Video 1</p>
                 <p class="subtitle is-6">@johnsmith</p>
                 </div>
             </div>
@@ -49,8 +49,8 @@
 
         <div class="card column is-one-third m-3">
             <div class="card-image">
-            <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            <figure class="image is-4by3" id="video-2">
+                <!-- <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> -->
             </figure>
             </div>
             <div class="card-content">
@@ -61,7 +61,7 @@
                 </figure>
                 </div>
                 <div class="media-content">
-                <p class="title is-4">John Smith</p>
+                <p class="title is-4">Video 2</p>
                 <p class="subtitle is-6">@johnsmith</p>
                 </div>
             </div>
@@ -78,8 +78,8 @@
 
         <div class="card column is-one-third m-3">
             <div class="card-image">
-            <figure class="image is-4by3">
-                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            <figure class="image is-4by3" id="video-3">
+                <!-- <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> -->
             </figure>
             </div>
             <div class="card-content">
@@ -90,7 +90,7 @@
                 </figure>
                 </div>
                 <div class="media-content">
-                <p class="title is-4">John Smith</p>
+                <p class="title is-4">Video 3</p>
                 <p class="subtitle is-6">@johnsmith</p>
                 </div>
             </div>
@@ -109,5 +109,8 @@
         <a class="button is-dark is-medium is-focused m-3">Generate Again</a>
         <a class="button is-dark is-medium is-focused m-3">Return to Home</a>
     </footer>
+    
+    <script src="./assets/key.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
