--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Movie Soundtrack Playlist Generator</title>
+    <title>Similar Movie Trailer Generator</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css">
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
@@ -51,10 +51,12 @@
             </div>
         </div>
         <div class="tile is-child is-flex is-justify-content-center">
-            <input class="input is-medium column is-6 mt-6" type="text" placeholder="Enter Movie Title Here!!">
+            <input id="input" class="input is-medium column is-6 mt-6" type="text"
+                placeholder="Enter Movie Title Here!!">
         </div>
         <div class="is-flex is-justify-content-center mt-3">
-            <button class="button is-light">Generate Trailers</button>
+            <button id="search" class="button is-light">Generate
+                Trailers</button>
         </div>
         <div class="is-flex is-justify-content-right">
             <div class="tile is-parent is-2">
