separated the two javascript files to go with the separate html files.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
     </main>
     <script src="./assets/key.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/index.js"></script>
 </body>
 
 </html>
