html clean-up, added some js user friendly functionality

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="has-background-dark is-family-monospace">
     <header>
         <div class="pt-5 is-flex is-justify-content-center">
-            <h1 class="notification title has-text-centered has-text-dark">Film Trailer Generator</h1>
+            <h1 class="notification title has-text-centered has-text-dark">Random Movie Night</h1>
         </div>
     </header>
     <main class="">
@@ -23,13 +23,9 @@
                 <div class="tile is-parent is-2">
                     <article class="tile is-child notification has-background-danger-dark">
                         <div class="content">
-                            <p class="title">POSTER</p>
-                            <p class="subtitle">Image</p>
-                            <p class="subtitle">Image</p>
-                            <p class="subtitle">Image</p>
-                            <div class="content">
-                                <!-- Content -->
-                            </div>
+                            <figure class="image is-128x128">
+                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                            </figure>
                         </div>
                     </article>
                 </div>
@@ -38,17 +34,18 @@
                 <div class="tile is-parent is-2">
                     <article class="tile is-child notification has-background-danger-dark">
                         <div class="content">
-                            <p class="title">POSTER</p>
-                            <p class="subtitle">Image</p>
-                            <p class="subtitle">Image</p>
-                            <p class="subtitle">Image</p>
-                            <div class="content">
-                                <!-- Content -->
-                            </div>
+                            <figure class="image is-128x128">
+                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                            </figure>
                         </div>
                     </article>
                 </div>
             </div>
+        </div>
+        <div class="is-flex is-justify-content-center">
+            <p class="has-text-centered subtitle has-text-light m-6 notification has-background-grey-dark column is-5">
+                Can't figure out what to watch?? Just enter the name of a movie you enjoy in the box below and let us do the work for you. We will generate three trailers of similar films to the one you searched! Not happy with the results?? Just click the button again!
+            </p>
         </div>
         <div class="tile is-child is-flex is-justify-content-center">
             <input id="input" class="input is-medium column is-6 mt-6" type="text"
@@ -62,13 +59,9 @@
             <div class="tile is-parent is-2">
                 <article class="tile is-child notification has-background-danger-dark">
                     <div class="content">
-                        <p class="title">POSTER</p>
-                        <p class="subtitle">Image</p>
-                        <p class="subtitle">Image</p>
-                        <p class="subtitle">Image</p>
-                        <div class="content">
-                            <!-- Content -->
-                        </div>
+                        <figure class="image is-128x128">
+                            <img src="https://bulma.io/images/placeholders/128x128.png">
+                        </figure>
                     </div>
                 </article>
             </div>
@@ -77,13 +70,9 @@
             <div class="tile is-parent is-2">
                 <article class="tile is-child notification has-background-danger-dark">
                     <div class="content">
-                        <p class="title">POSTER</p>
-                        <p class="subtitle">Image</p>
-                        <p class="subtitle">Image</p>
-                        <p class="subtitle">Image</p>
-                        <div class="content">
-                            <!-- Content -->
-                        </div>
+                        <figure class="image is-128x128">
+                            <img src="https://bulma.io/images/placeholders/128x128.png">
+                        </figure>
                     </div>
                 </article>
             </div>
