refresh functionality added to generate btn, landing page re formatted

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
     </header>
     <main class="">
-        <div class="">
-            <div class="is-flex is-justify-content-right">
-                <div class="tile is-parent is-2">
+        <div class="level">
+            <div class="level-left">
+                <div class="is-2">
                     <article class="tile is-child notification has-background-danger-dark">
                         <div class="content">
                             <figure class="image is-128x128">
@@ -30,8 +30,8 @@
                     </article>
                 </div>
             </div>
-            <div class="is-flex is-justify-content-left">
-                <div class="tile is-parent is-2">
+            <div class="level-right">
+                <div class="is-2">
                     <article class="tile is-child notification has-background-danger-dark">
                         <div class="content">
                             <figure class="image is-128x128">
@@ -55,29 +55,36 @@
             <button id="search" class="button is-light">Generate
                 Trailers</button>
         </div>
-        <div class="is-flex is-justify-content-right">
-            <div class="tile is-parent is-2">
-                <article class="tile is-child notification has-background-danger-dark">
-                    <div class="content">
-                        <figure class="image is-128x128">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </figure>
-                    </div>
-                </article>
+        <div class="level">
+            <div class="level-left mb-3">
+                <div class="is-2">
+                    <article class="tile is-child notification has-background-danger-dark">
+                        <div class="content">
+                            <figure class="image is-128x128">
+                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                            </figure>
+                        </div>
+                    </article>
+                </div>
             </div>
-        </div>
-        <div class="is-flex is-justify-content-left">
-            <div class="tile is-parent is-2">
-                <article class="tile is-child notification has-background-danger-dark">
-                    <div class="content">
-                        <figure class="image is-128x128">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
-                        </figure>
-                    </div>
-                </article>
+            <div class="level-right mb-3">
+                <div class="is-2">
+                    <article class="tile is-child notification has-background-danger-dark">
+                        <div class="content">
+                            <figure class="image is-128x128">
+                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                            </figure>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
     </main>
+    <footer class="">
+        <div class="pb-5">
+            <h1 class="notification is-dark title has-text-centered has-text-light">Enjoy!!</h1>
+        </div>
+    </footer>
     <script src="./assets/key.js"></script>
     <script src="./assets/index.js"></script>
 </body>
