--- a/results.html
+++ b/results.html
@@ -104,8 +104,8 @@
         </div>
     </main>
     <footer class="columns is-centered">
-        <a class="button is-danger is-medium is-focused m-3">Generate Again</a>
-        <a class="button is-danger is-medium is-focused m-3">Return to Home</a>
+        <a class="button is-danger is-medium is-focused m-3" id="refresh">Generate Again</a>
+        <a class="button is-danger is-medium is-focused m-3" id="refresh">Return to Home</a>
     </footer>
 
     <script src="./assets/key.js"></script>
