js button functions, embed dynamic title and plot

--- a/results.html
+++ b/results.html
@@ -34,16 +34,15 @@
                         </figure>
                     </div>
                     <div class="media-content">
-                        <p class="title is-4">Video 1</p>
-                        <p class="subtitle is-6">Movie Title</p>
+                        <p class="title is-4" id="movie-title-1">Video 1</p>
                     </div>
                 </div>
 
                 <div class="content notification has-background-grey-light">
-                    <p>
+                    <p id="movie-plot-1">
                         Short plot version, awards, etc. 
                     </p>
-                    <p>Release Year?</p>
+                    <p id="movie-year-1">Release Year?</p>
                 </div>
             </div>
         </div>
@@ -62,16 +61,15 @@
                         </figure>
                     </div>
                     <div class="media-content">
-                        <p class="title is-4">Video 2</p>
-                        <p class="subtitle is-6">Movie Title</p>
+                        <p class="title is-4" id="movie-title-2">Video 2</p>
                     </div>
                 </div>
 
                 <div class="content notification has-background-grey-light">
-                    <p>
+                    <p id="movie-plot-2">
                         Short plot version, awards, etc. 
                     </p>
-                    <p>Release Year?</p>
+                    <p id="movie-year-2">Release Year?</p>
                 </div>
             </div>
         </div>
@@ -90,22 +88,21 @@
                         </figure>
                     </div>
                     <div class="media-content">
-                        <p class="title is-4">Video 3</p>
-                        <p class="subtitle is-6">Movie Title</p>
+                        <p class="title is-4"  id="movie-title-3">Video 3</p>
                     </div>
                 </div>
 
                 <div class="content notification has-background-grey-light">
-                    <p>
+                    <p id="movie-plot-3">
                         Short plot version, awards, etc. 
                     </p>
-                    <p>Release Year?</p>
+                    <p id="movie-year-3">Release Year?</p>
                 </div>
         </div>
     </main>
     <footer class="columns is-centered">
         <a class="button is-danger is-medium is-focused m-3" id="refresh">Generate Again</a>
-        <a class="button is-danger is-medium is-focused m-3" id="refresh">Return to Home</a>
+        <a class="button is-danger is-medium is-focused m-3" id="return">Return to Home</a>
     </footer>
 
     <script src="./assets/key.js"></script>
