--- a/results.html
+++ b/results.html
@@ -21,10 +21,7 @@
     </header>
     <main class="columns block is-5 is-centered">
         <div class="card block column is-one-third m-3">
-            <div class="card-image">
-                <figure class="image is-4by3" id="video-1">
-                    <!-- <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> -->
-                </figure>
+            <div class="card-image image is-128x128" id="video-1">
             </div>
             <div class="card-content">
                 <div class="media">
@@ -49,10 +46,7 @@
         </div>
 
         <div class="card block column is-one-third m-3">
-            <div class="card-image">
-                <figure class="image is-4by3" id="video-2">
-                    <!-- <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> -->
-                </figure>
+            <div class="card-image"  id="video-2">
             </div>
             <div class="card-content">
                 <div class="media">
@@ -77,10 +71,7 @@
         </div>
 
         <div class="card block column is-one-third m-3">
-            <div class="card-image">
-                <figure class="image is-4by3" id="video-3">
-                    <!-- <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image"> -->
-                </figure>
+            <div class="card-image" id="video-3">
             </div>
             <div class="card-content">
                 <div class="media">
