--- a/results.html
+++ b/results.html
@@ -21,7 +21,7 @@
     </header>
     <main class="columns block is-5 is-centered">
         <div class="card block column is-one-third m-3">
-            <div class="card-image image is-128x128" id="video-1">
+            <div class="card-image" id="video-1">
             </div>
             <div class="card-content">
                 <div class="media">
