cleaned up code and added attemped simultaneous api call function and fixes some bugs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="is-flex is-justify-content-center">
             <p class="has-text-centered subtitle has-text-light m-6 notification has-background-grey-dark column is-5">
-                Can't figure out what to watch?? Just enter the name of a movie you enjoy in the box below and let us do the work for you. We will generate three trailers of similar films to the one you searched! Not happy with the results?? Just click the button again!
+                Can't figure out what to watch? Just enter the name of a movie you enjoy in the box below and let us do the work for you. We will generate three trailers of similar films to the one you searched! Not happy with the results? Just click the Generate Again button!
             </p>
         </div>
         <div class="tile is-child is-flex is-justify-content-center">
