--- a/results.html
+++ b/results.html
@@ -16,7 +16,7 @@
             <p class="title has-text-light">Movies Similar to...</p>
         </div>
         <div class="message-body">
-            You can watch all or any one of the three trailers below to find a film you enjoy! If you want to find three new movies click the Generate Again or Return button. If not, enjoy your movie choice!!
+            You can watch all or any one of the three trailers below to find a film you enjoy! If you want to find three new movies click the Generate Again button or the Return key. If not, enjoy your movie choice! Otherwise, you can click the Return to Home button to search a different movie.
         </div>
     </header>
     <main class="columns block is-5 is-centered">
