--- a/results.html
+++ b/results.html
@@ -21,14 +21,11 @@
     </header>
     <main class="columns block is-5 is-centered">
         <div class="card block column is-one-third m-3">
-            <div class="card-image" id="video-1">
+            <div class="card-image container" id="video-1">
             </div>
             <div class="card-content">
                 <div class="media">
                     <div class="media-left">
-                        <figure class="image is-48x48">
-                            <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                        </figure>
                     </div>
                     <div class="media-content">
                         <p class="title is-4" id="movie-title-1">Video 1</p>
@@ -45,14 +42,11 @@
         </div>
 
         <div class="card block column is-one-third m-3">
-            <div class="card-image"  id="video-2">
+            <div class="card-image container"  id="video-2">
             </div>
             <div class="card-content">
                 <div class="media">
                     <div class="media-left">
-                        <figure class="image is-48x48">
-                            <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                        </figure>
                     </div>
                     <div class="media-content">
                         <p class="title is-4" id="movie-title-2">Video 2</p>
@@ -69,14 +63,11 @@
         </div>
 
         <div class="card block column is-one-third m-3">
-            <div class="card-image" id="video-3">
+            <div class="card-image container" id="video-3">
             </div>
             <div class="card-content">
                 <div class="media">
                     <div class="media-left">
-                        <figure class="image is-48x48">
-                            <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                        </figure>
                     </div>
                     <div class="media-content">
                         <p class="title is-4"  id="movie-title-3">Video 3</p>
