--- a/results.html
+++ b/results.html
@@ -8,6 +8,7 @@
     <title>Random Trailers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="has-background-dark is-family-monospace">
