--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                     </article>
                 </div>
             </div>
+            <div class="level is-flex is-justify-content-center">
+                <p class="has-text-centered subtitle has-text-light m-6 notification has-background-grey-dark column is-5">
+                    Can't figure out what to watch? Just enter the name of a movie you enjoy in the box below and let us do the work for you. We will generate three trailers of similar films to the one you searched! Not happy with the results? Just click the Generate Again button!
+                </p>
+            </div>
             <div class="level-right">
                 <div class="is-2">
                     <article class="tile is-child notification has-background-danger-dark">
@@ -41,11 +46,6 @@
                     </article>
                 </div>
             </div>
-        </div>
-        <div class="is-flex is-justify-content-center">
-            <p class="has-text-centered subtitle has-text-light m-6 notification has-background-grey-dark column is-5">
-                Can't figure out what to watch? Just enter the name of a movie you enjoy in the box below and let us do the work for you. We will generate three trailers of similar films to the one you searched! Not happy with the results? Just click the Generate Again button!
-            </p>
         </div>
         <div class="tile is-child is-flex is-justify-content-center">
             <input id="input" class="input is-medium column is-6 mt-6" type="text"
