added screenshots to readme and fixed minor errors

--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
 <body class="has-background-dark is-family-monospace">
     <header class="message is-dark mt-5">
         <div class="message-header">
-            <p class="title has-text-light">Movies Similar to...</p>
+            <p class="title has-text-light">The results are in!</p>
         </div>
         <div class="message-body">
             You can watch all or any one of the three trailers below to find a film you enjoy! If you want to find three new movies click the Generate Again button or the Return key. If not, enjoy your movie choice! Otherwise, you can click the Return to Home button to search a different movie.
