--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="tile is-child is-flex is-justify-content-center">
             <input id="input" class="input is-medium column is-6 mt-6" type="text"
-                placeholder="Enter Movie Title Here!!">
+                placeholder="Enter Movie Title Here!">
         </div>
         <div class="is-flex is-justify-content-center mt-3">
             <button id="search" class="button is-light">Generate
