removed test alert message and fixed minor issues

--- a/results.html
+++ b/results.html
@@ -35,9 +35,9 @@
 
                 <div class="content notification has-background-grey-light">
                     <p id="movie-plot-1">
-                        Short plot version, awards, etc. 
+                        Error: Video not found.
                     </p>
-                    <p id="movie-year-1">Release Year?</p>
+                    <p id="movie-year-1"> </p>
                 </div>
             </div>
         </div>
@@ -56,9 +56,9 @@
 
                 <div class="content notification has-background-grey-light">
                     <p id="movie-plot-2">
-                        Short plot version, awards, etc. 
+                        Error: Video not found.
                     </p>
-                    <p id="movie-year-2">Release Year?</p>
+                    <p id="movie-year-2"> </p>
                 </div>
             </div>
         </div>
@@ -77,9 +77,9 @@
 
                 <div class="content notification has-background-grey-light">
                     <p id="movie-plot-3">
-                        Short plot version, awards, etc. 
+                        Error: Video not found.
                     </p>
-                    <p id="movie-year-3">Release Year?</p>
+                    <p id="movie-year-3"> </p>
                 </div>
         </div>
     </main>
